# rust-tac-toe

./: Cargo.toml  Makefile  README.md  example-wasm.html  index.html
.github/workflows/: deploy.yml
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  console.rs  main.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/gui/: Cargo.toml
crates/gui-core/: Cargo.toml
crates/gui-core/src/: lib.rs
crates/gui-exe/: Cargo.toml
crates/gui-exe/src/: main.rs
crates/gui-wasm/: Cargo.toml  Trunk.toml  index.html
crates/gui-wasm/src/: lib.rs
crates/gui/src/: gui.rs  main.rs
crates/wasm/: Cargo.toml  Trunk.toml  index.html
crates/wasm/pkg/: rust_tac_toe_wasm_bg.wasm
crates/wasm/src/: lib.rs
crates/wasm/static/: game.js  style.css
gui-wasm/: index.html  rust-tac-toe-gui-wasm-50b1a6c804b5aa90.js  rust-tac-toe-gui-wasm-50b1a6c804b5aa90_bg.wasm  rust-tac-toe-gui-wasm-d84d6da97b095c30.js  rust-tac-toe-gui-wasm-d84d6da97b095c30_bg.wasm  rust-tac-toe-gui-wasm-dee5c788454a163c.js  rust-tac-toe-gui-wasm-dee5c788454a163c_bg.wasm
pkg/: rust_tac_toe_wasm.js  rust_tac_toe_wasm_bg.wasm
src/: console.rs  engine.rs  gui.rs  lib.rs  main.rs
static/: game.js
wasm/: game-5ffd465092db1ddd.js  index.html  rust-tac-toe-wasm-760307df0a8f54d0.js  rust-tac-toe-wasm-760307df0a8f54d0_bg.wasm  style-5b0b007e1813be0b.css
