[package]
name = "rust-tac-toe"
version = "0.1.0"
edition = "2024"

[dependencies]

# Optional GUI dependency (enable with `--features gui`).
# You can adjust the version as needed for your environment.
eframe = { version = "0.24", optional = true }

[features]
# Enable desktop GUI (eframe). For wasm later, enable eframe's wasm features.
gui = ["eframe"]

[target.'cfg(windows)'.dependencies]
# Ensure `winapi` features required by eframe are enabled on Windows
winapi = { version = "0.3", features = ["winuser", "windef"] }
