[package]
name = "rust-tac-toe-gui-exe"
version = "0.1.0"
edition = "2024"

[dependencies]
rust-tac-toe-gui-core = { path = "../gui-core" }
eframe = { version = "0.24" }


[target.'cfg(windows)'.dependencies]
# Ensure `winapi` features required by eframe are enabled on Windows
winapi = { version = "0.3", features = ["winuser", "windef"] }
