[package]
name = "rust-tac-toe-wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
rust-tac-toe-engine = { path = "../engine", features = ["wasm"] }
# WASM bindings for JavaScript interop
wasm-bindgen = { version = "0.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
wee_alloc = { version = "0.4" }


[lib]
name = "rust_tac_toe_wasm"
crate-type = ["cdylib", "rlib"]
